--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+@import "tailwindcss/base";
+
 
 #root {
     width: 100%;
